--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=drink_alcohol
 APP_ENV=development
 APP_KEY=
 APP_DEBUG=true
-APP_URL=https://yinjiu.dltqwy.com/
+APP_URL=https://yj.dltqwy.com/
 APP_TIMEZONE=Asia/Tokyo
 
 LOG_CHANNEL=stack
